# event_batch

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md
doc/: CMakeLists.txt  Doxyfile.in  main.dox
include/: event_batch.hpp
include/event_batch/: assert.hpp  batch.hpp  event_stream_statistics.hpp  global_decay.hpp  stream_statistics.hpp  tictoc.hpp  types.hpp  utils.hpp
src/: CMakeLists.txt  batch_size.cpp  batch_timestamp.cpp
src/event_batch/: CMakeLists.txt
src/runtime_benchmark/: CMakeLists.txt  batch.cpp  event_stream_statistics.cpp  global_decay.cpp
test/: CMakeLists.txt  batch.cpp  event_stream_statistics.cpp  global_decay.cpp
